--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [ "main" ]
 
+permissions:
+  contents: write   # <-- REQUIRED so GitHub can create gh-pages
+
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
@@ -12,8 +15,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Quarto
+      - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
+
+      - name: Set up Python (needed because you use .ipynb)
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          cache: "pip"
+
+      - name: Install Jupyter and dependencies
+        run: |
+          pip install jupyter
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Render site
         uses: quarto-dev/quarto-actions/render@v2
