--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,8 +3,9 @@ project:
   resources:
     - "videos/**"
     - "images/**"
-  execute:
-    freeze: auto
+
+execute:
+  freeze: true
 
 website:
   title: "Data Visualization"
