--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 # To execute the code in our notebook
-altair
+BeautifulSoup4
 matplotlib
 numpy
+pandas
 plotly
+pybliometrics
+requests
+seaborn
 vega_datasets
 
-# To interactively browser Jupyter content with MyST
-jupyterlab_myst
+
